# sec-filing-intelligence

./: .gitignore  DEPLOYMENT_SUCCESS.md  IMPROVEMENTS_SUMMARY.md  Makefile  PRD.md  README.md  SECFilingsExplained.md  SECFilingsExplained.md   StyleGuide.md  batch_update_tickers.py  clear_data.py  commitlint.config.cjs  create_enhanced_analyses.py  deploy_enhancements.sh  package-lock.json  package.json  reprocess_all_filings.py  reprocess_failed_form4.py  reprocess_form3.py  reprocess_form4.py  reprocess_missing_analyses.sh  reprocess_other_forms.py  reprocess_ticker_lookup.py  simple_reprocess_all.py  test_enhanced_features.py  test_reprocessing.py  test_trello_automation_test.py  trigger_enhanced_processing.py  update_ticker_info.py
backend/: Dockerfile  README.md  alembic.ini  clear_data.py  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_downloader_metadata.py  (+3 more)
backend/app/: config.py  db.py  main.py  sec_utils.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_auth_router.py  test_backpressure.py  test_chunk_planner.py  test_chunk_queue.py  test_diff_worker.py  test_download_queue.py  test_downloader_worker.py  test_entity_worker.py  test_groq_budget.py  test_health.py  test_ingestion_feed.py  test_ingestion_poller.py  test_keycloak_token_verifier.py  test_models.py  test_opa_client.py  test_organization_repository.py  test_parser_worker.py  test_section_summary_worker.py  test_sectionizer.py  utils.py
docs/: README.md  (+5 more)
(+152 files in other folders)
